update to last MFF, FindBugs, PMD, replaces nextDouble -> nextFloat, more XSTR, keySet() -> entrySet() (not fully?), more buffers/try-catch, off parts sync func, code cleanup, add spigot patch - dont limit player speed, add other spigot patches(?), ..., etc, etc..